--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 </div>
                 <div class="footer-list">
                     <ul>
-                        <li><a href="#"><span class="fa fa-twitter"></span> Twitter</a></li>
-                        <li><a href="#"><span class="fa fa-facebook"></span> Facebook</a></li>
+                        <li><a class="long"href="#"><span class="fa fa-twitter"> Twitter</span></a></li>
+                        <li><a class="long"href="#"><span class="fa fa-facebook"> Facebook</span></a></li>
+                        <li><a class="short"href="#"><span class="fa fa-twitter"></span></a></li>
+                        <li><a class="short" href="#"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="#">Contact Us</a></li>
                         <li><a href="#">About Us</a></li>                        
                     </div>
